--- a/style.css
+++ b/style.css
@@ -138,17 +138,23 @@ header .brand {
   text-transform: uppercase;
   text-decoration: none;
 }
+header .brand img {
+  width: 15%;
+}
 
 header .navigation {
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header .navigation a {
   color: #fff;
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: 500;
   text-decoration: none;
-  margin-left: 30px;
+  margin: 20px;
 }
 
 header .navigation a:hover {
@@ -368,7 +374,7 @@ body {
 
 .services .content .card .service-icon {
   color: #3a6cf4;
-  font-size: 8em;
+  font-size: 4em;
   text-align: center;
   transition: transform 0.5s ease;
 }
