--- a/style.css
+++ b/style.css
@@ -726,3 +726,21 @@ body {
   transform: translateY(0);
   opacity: 1;
 }
+
+@media screen and (max-width: 320px) {
+  .main {
+    display: block;
+  }
+  .main .content {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    margin: 5px 0;
+  }
+  .main .bio {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    margin-top: 30px;
+  }
+}
